--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -33,6 +33,7 @@ arb:
       # detach: "Dissocier une transaction"
       # index: "Transactions"
       # select: "Ajouter une transaction"
+    backend/aggregators: #?
     backend/analytic_repartitions:
       # edit: "Modifier la répartion analytique\_: %{id} "
       # index: "Répartitions analytiques"
@@ -158,6 +159,7 @@ arb:
       # tools: "Tableau de bord des outils"
       # welcome: "Bienvenue dans Ekylibre"
     backend/data_view/manure_management_plans: #?
+    backend/data_view/veterinary_booklets: #?
     backend/delays:  #?
       edit: "تعديل المهلة : %{name}" #?
       index: "مهلة" #?
@@ -272,6 +274,7 @@ arb:
       # edit: "Modifier l’approvisionnement: %{number}"
       # index: "Approvisionnements"
       # new: "Enregistrer un nouvel approvisionnement"
+      # show: "Approvisionnement %{number} ( %{reference_number} )"
     backend/incoming_delivery_items:
       # new: "Nouvel item"
     backend/incoming_delivery_modes:
@@ -521,6 +524,7 @@ arb:
       new: "اضافة عنصر الى المنتج %{product} " #?
     backend/product_nature_indicators: #?
     backend/product_nature_prices: #?
+    backend/product_nature_variant_indicator_data: #?
     backend/product_nature_variants:
       # edit: "Modifier la variante de produit\_: %{name}"
       # index: "Variantes de produits"
@@ -533,8 +537,7 @@ arb:
       show: "المنتجات : %{name}"
     backend/product_price_listings:
       # index: "Listes de prix"
-    backend/product_price_templates:
-      # index: "Types de prix"
+    backend/product_price_templates: #?
     backend/product_prices:
       # index: "Prix des produits"
     backend/product_process_phases: #?
@@ -798,7 +801,6 @@ arb:
     backend/product_nature_categories: "فئات المنتج" #?
     backend/product_natures: "المنتجات"
     # backend/product_price_listings: "Listes de prix"
-    # backend/product_price_templates: "Types de prix"
     # backend/product_prices: "Prix des produits"
     backend/product_stocks: "وضع الاسهم" #?
     backend/product_transfers: "عمليات نقل وخسارة الاسهم" #?
