--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -33,6 +33,7 @@ spa:
       # detach: "Dissocier une transaction"
       # index: "Transactions"
       # select: "Ajouter une transaction"
+    backend/aggregators: #?
     backend/analytic_repartitions:
       # edit: "Modifier la répartion analytique\_: %{id} "
       # index: "Répartitions analytiques"
@@ -158,6 +159,7 @@ spa:
       # tools: "Tableau de bord des outils"
       # welcome: "Bienvenue dans Ekylibre"
     backend/data_view/manure_management_plans: #?
+    backend/data_view/veterinary_booklets: #?
     backend/delays:  #?
       edit: "Modificacion del plazo : %{name}" #?
       index: "plazos" #?
@@ -250,6 +252,7 @@ spa:
       # edit: "Modifier l’approvisionnement: %{number}"
       # index: "Approvisionnements"
       # new: "Enregistrer un nouvel approvisionnement"
+      # show: "Approvisionnement %{number} ( %{reference_number} )"
     backend/incoming_delivery_items:
       # new: "Nouvel item"
     backend/incoming_delivery_lines: #?
@@ -479,6 +482,7 @@ spa:
     backend/product_nature_components: #?
     backend/product_nature_indicators: #?
     backend/product_nature_prices: #?
+    backend/product_nature_variant_indicator_data: #?
     backend/product_nature_variants:
       # edit: "Modifier la variante de produit\_: %{name}"
       # index: "Variantes de produits"
@@ -491,8 +495,7 @@ spa:
       # show: "Type de produit\_: %{name}"
     backend/product_price_listings:
       # index: "Listes de prix"
-    backend/product_price_templates:
-      # index: "Types de prix"
+    backend/product_price_templates: #?
     backend/product_prices:
       # index: "Prix des produits"
     backend/product_process_phases: #?
@@ -708,7 +711,6 @@ spa:
     # backend/product_moves: "Mouvements de stock"
     # backend/product_natures: "Types de produits"
     # backend/product_price_listings: "Listes de prix"
-    # backend/product_price_templates: "Types de prix"
     # backend/product_prices: "Prix des produits"
     backend/production: "Producción" #?
     # backend/products: "Produits"
