continu on rake db:demo but don't work for instance.

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -322,6 +322,17 @@ fra:
         in_production: "En production"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         lipolysis: "Lipolyse"
+        population: "Population"
+        net_weight: "Poids net"
+        net_volume: "Volume net"
+        shape: "Forme"
+        usage_duration: "Durée d'utilisation"
+        net_surface_area: "Surface net"
+        meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
+        milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+        isu_index: "Index génétique ISU"
+        inel_index: "Index génétique INEL"
+        tp_index: "Index génétique Taux protéïque"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -353,6 +364,7 @@ fra:
         charge_account: "Compte de charge"
         depreciable: "Immobilisable"
         derivative: "Dérivé de la vaiété"
+        frozen_measures: "Indicateurs figés"
         indicators: "Indicateurs"
         number: "Numéro"
         product_account: "Compte de produit"
@@ -362,7 +374,21 @@ fra:
         stock_account: "Compte de stock"
         storable: "Stockable"
         unit: "Unité"
+        unit_name: "Nom de l'unité"
         variety: "Variété"
+      choices:
+        unit_name:
+          head: "tête"
+          unit: "unité"
+          liter: "litre"
+          hectare: "hectare"
+          kilogram: "kilogramme"
+          ton: "tonne"
+          box: "boîte"
+          hour: "heure"
+          cubic_meter: "mètre cube"
+          can: "bidon"
+          bag: "sac"
       items:
         animal_building: "Bâtiment d'accueil pour les animaux"
         animal_medicine: "Produit vétérinaire"
@@ -435,6 +461,19 @@ fra:
         celsius: "celsius"
         square_meter: "mètre carré"
         unity: "unité"
+        pair: "paire"
+        dozen: "douzaine"
+        hundred: "centaine"
+        thousand: "millier"
+        million: "million"
+        gram: "gramme"
+        kilogram: "kilogramme"
+        quintal: "quintal"
+        ton: "tonne"
+        square_meter: "mètre carré"
+        are: "are"
+        hectare: "hectare"
+        liter: "litre"
       name: "Unités de mesure"
     varieties:
       items:
