--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -320,28 +320,28 @@ fra:
         ground_appearance: "Aspect du sol"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         in_production: "En production"
-        inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        lipolysis: "Lipolyse"
-        population: "Population"
-        net_weight: "Poids net"
-        net_volume: "Volume net"
-        shape: "Forme"
-        usage_duration: "Durée d'utilisation"
-        net_surface_area: "Surface net"
-        meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
-        milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
-        isu_index: "Index génétique ISU"
         inel_index: "Index génétique INEL"
-        tp_index: "Index génétique Taux protéïque"
+        inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        isu_index: "Index génétique ISU"
+        lipolysis: "Lipolyse"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
+        milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+        net_surface_area: "Surface net"
+        net_volume: "Volume net"
+        net_weight: "Poids net"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
+        population: "Population"
         protein_matters_concentration: "Teneur en matières protéïques"
+        shape: "Forme"
         sowable: "Semable"
         temperature: "Température"
         total_bacteria_concentration: "Dénombrement des germes totaux"
+        tp_index: "Index génétique Taux protéïque"
         urea_concentration: "Teneur moyenne en urée"
+        usage_duration: "Durée d'utilisation"
       name: "Indicateurs"
     procedure_natures:
       items:
@@ -364,7 +364,7 @@ fra:
         charge_account: "Compte de charge"
         depreciable: "Immobilisable"
         derivative: "Dérivé de la vaiété"
-        frozen_measures: "Indicateurs figés"
+        frozen_indicators: "Indicateurs fixes"
         indicators: "Indicateurs"
         number: "Numéro"
         product_account: "Compte de produit"
@@ -378,17 +378,17 @@ fra:
         variety: "Variété"
       choices:
         unit_name:
-          head: "tête"
-          unit: "unité"
-          liter: "litre"
-          hectare: "hectare"
-          kilogram: "kilogramme"
-          ton: "tonne"
-          box: "boîte"
-          hour: "heure"
-          cubic_meter: "mètre cube"
-          can: "bidon"
           bag: "sac"
+          box: "boîte"
+          can: "bidon"
+          cubic_meter: "mètre cube"
+          head: "tête"
+          hectare: "hectare"
+          hour: "heure"
+          kilogram: "kilogramme"
+          liter: "litre"
+          ton: "tonne"
+          unit: "unité"
       items:
         animal_building: "Bâtiment d'accueil pour les animaux"
         animal_medicine: "Produit vétérinaire"
@@ -458,22 +458,21 @@ fra:
       name: "Type de procédures"
     units:
       items:
-        celsius: "celsius"
-        square_meter: "mètre carré"
-        unity: "unité"
-        pair: "paire"
-        dozen: "douzaine"
-        hundred: "centaine"
-        thousand: "millier"
-        million: "million"
-        gram: "gramme"
-        kilogram: "kilogramme"
-        quintal: "quintal"
-        ton: "tonne"
-        square_meter: "mètre carré"
         are: "are"
+        celsius: "celsius"
+        dozen: "douzaine"
+        gram: "gramme"
         hectare: "hectare"
+        hundred: "centaine"
+        kilogram: "kilogramme"
         liter: "litre"
+        million: "million"
+        pair: "paire"
+        quintal: "quintal"
+        square_meter: "mètre carré"
+        thousand: "millier"
+        ton: "tonne"
+        unity: "unité"
       name: "Unités de mesure"
     varieties:
       items:
