--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -737,7 +737,9 @@ eng:
     currency_precision: "Currency precision"
     currency_rate: "Currency rate"
     current_amount: "Current amount"
+    # current_animal_disease_state: "Etat de santé actuel"
     current_financial_year: "Current financial year" #?
+    # current_net_weight: "Dernière pesée"
     custom_field: "Custom field"
     custom_field_choices: "Custom field choices"
     custom_field_data: "Custom field data" #?
