--- a/config/locales/fra/help/plants-index.txt
+++ b/config/locales/fra/help/plants-index.txt
@@ -2,8 +2,8 @@
 
 Vous avez accès au récapitulatif de toutes vos cultures.
 
-Les conduites de cultures s'effectuent via des procédures.
+Les conduites de cultures s'effectuent via des [[>backend/procedures|procédures]] et dans le cadre d'une [[>backend/productions|production]]
 
-!!! Une culture s'implante sur une [[>backend/land_parcel_groups|parcelle culturale]].
+!!! Une culture s'implante sur une [[>backend/cultivable_land_parcels|parcelle culturale]].
 
 
