--- a/config/locales/fra/prints/veterinary_booklet.xml
+++ b/config/locales/fra/prints/veterinary_booklet.xml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="veterinary_booklet" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
 	<property name="ireport.zoom" value="0.9558924531310702"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="323"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
 	<style name="Title" fontName="DejaVu Sans" fontSize="30" isBold="true" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
@@ -35,87 +35,90 @@
 		<defaultValueExpression><![CDATA["/home/djoulin/ekylibre/config/locales/fra/prints/"]]></defaultValueExpression>
 	</parameter>
 	<queryString language="xPath">
-		<![CDATA[/interventions/intervention/input]]>
+		<![CDATA[campaigns/campaign/intervention/inputs/input]]>
 	</queryString>
 	<field name="entity_name" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::interventions/@entity_name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::campaigns/@entity-name]]></fieldDescription>
 	</field>
 	<field name="campaign" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::interventions/@campaign]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::campaign/@id]]></fieldDescription>
 	</field>
 	<field name="started_at" class="java.util.Date">
-		<fieldDescription><![CDATA[@started_at]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@started-at]]></fieldDescription>
 	</field>
 	<field name="stopped_at" class="java.util.Date">
-		<fieldDescription><![CDATA[@stopped_at]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@stopped-at]]></fieldDescription>
 	</field>
 	<field name="target_class_name" class="java.lang.String">
-		<fieldDescription><![CDATA[@target_class_name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@target-type]]></fieldDescription>
 	</field>
 	<field name="target_identification" class="java.lang.String">
-		<fieldDescription><![CDATA[@target_identification]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@target-identification-number]]></fieldDescription>
 	</field>
 	<field name="target_name" class="java.lang.String">
-		<fieldDescription><![CDATA[@target_name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@target-name]]></fieldDescription>
 	</field>
 	<field name="description" class="java.lang.String">
-		<fieldDescription><![CDATA[incident/@description]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@incident-description]]></fieldDescription>
 	</field>
 	<field name="name" class="java.lang.String">
-		<fieldDescription><![CDATA[incident/@name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@incident-name]]></fieldDescription>
 	</field>
 	<field name="observed_at" class="java.util.Date">
-		<fieldDescription><![CDATA[incident/@observed_at]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@incident-observed-at]]></fieldDescription>
 	</field>
 	<field name="state" class="java.lang.String">
-		<fieldDescription><![CDATA[incident/@state]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@incident-state]]></fieldDescription>
 	</field>
 	<field name="worker_name" class="java.lang.String">
-		<fieldDescription><![CDATA[@worker_name]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@worker-name]]></fieldDescription>
 	</field>
 	<field name="id" class="java.lang.String">
-		<fieldDescription><![CDATA[prescription/@id]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@prescription-id]]></fieldDescription>
 	</field>
 	<field name="prescriptor" class="java.lang.String">
-		<fieldDescription><![CDATA[prescription/@prescriptor]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@prescription-prescriptor-name]]></fieldDescription>
 	</field>
 	<field name="reference_number" class="java.lang.String">
-		<fieldDescription><![CDATA[prescription/@reference_number]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@prescription-reference-number]]></fieldDescription>
 	</field>
 	<field name="meat_min_sale_date" class="java.util.Date">
-		<fieldDescription><![CDATA[@meat_min_sale_date]]></fieldDescription>
+		<fieldDescription><![CDATA[sale-dates/meat-saleable-on]]></fieldDescription>
 	</field>
 	<field name="milk_min_sale_date" class="java.util.Date">
-		<fieldDescription><![CDATA[@milk_min_sale_date]]></fieldDescription>
+		<fieldDescription><![CDATA[sale-dates/milk-saleable-on]]></fieldDescription>
 	</field>
 	<field name="medicine_name" class="java.lang.String">
-		<fieldDescription><![CDATA[@name]]></fieldDescription>
+		<fieldDescription><![CDATA[name]]></fieldDescription>
 	</field>
 	<field name="medicine_nature" class="java.lang.String">
-		<fieldDescription><![CDATA[@nature]]></fieldDescription>
+		<fieldDescription><![CDATA[nature-name]]></fieldDescription>
 	</field>
 	<field name="procedure_duration_day" class="java.lang.Double">
-		<fieldDescription><![CDATA[@procedure_duration_day]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@duration]]></fieldDescription>
 	</field>
 	<field name="quantity" class="java.lang.Double">
-		<fieldDescription><![CDATA[@quantity]]></fieldDescription>
+		<fieldDescription><![CDATA[measure-quantity]]></fieldDescription>
 	</field>
 	<field name="quantity_unit" class="java.lang.String">
-		<fieldDescription><![CDATA[@quantity_unit]]></fieldDescription>
+		<fieldDescription><![CDATA[measure-unit]]></fieldDescription>
 	</field>
 	<field name="target_id" class="java.lang.String">
-		<fieldDescription><![CDATA[@target_id]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@target-id]]></fieldDescription>
 	</field>
 	<field name="worker_entity_id" class="java.lang.String">
-		<fieldDescription><![CDATA[@worker_entity_id]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::intervention/@worker-person-id]]></fieldDescription>
 	</field>
 	<field name="entity_breeding_number" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::interventions/@entity_breeding_number]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::campaigns/@breeding-number]]></fieldDescription>
 	</field>
 	<field name="entity_adress" class="java.lang.String">
-		<fieldDescription><![CDATA[ancestor::interventions/@entity_adress]]></fieldDescription>
+		<fieldDescription><![CDATA[ancestor::campaigns/@address]]></fieldDescription>
 	</field>
-	<group name="campaign" isStartNewPage="true">
+	<field name="campaign_name" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::campaign/@name]]></fieldDescription>
+	</field>
+	<group name="campaign" isStartNewPage="true" isReprintHeaderOnEachPage="true">
 		<groupExpression><![CDATA[$F{campaign}]]></groupExpression>
 	</group>
 	<background>
@@ -137,13 +140,6 @@
 				</textElement>
 				<text><![CDATA[Carnet sanitaire]]></text>
 			</staticText>
-			<textField>
-				<reportElement uuid="26989836-89a9-4862-8b1a-40c2b54e1ee3" x="672" y="0" width="114" height="29"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font size="14"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{campaign}]]></textFieldExpression>
-			</textField>
 			<textField>
 				<reportElement uuid="6e0769cf-38a5-42a5-9a6e-7f073c13bdeb" x="0" y="171" width="786" height="40"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -170,7 +166,7 @@
 			<textField>
 				<reportElement uuid="548666df-fcbc-42e7-b461-8ee8b327b70e" style="address" x="0" y="0" width="786" height="13"/>
 				<textElement textAlignment="Center" verticalAlignment="Top"/>
-				<textFieldExpression><![CDATA["Carnet sanitaire de la campagne "+$F{campaign}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Carnet sanitaire "]]></textFieldExpression>
 			</textField>
 			<rectangle radius="10">
 				<reportElement uuid="23e8397b-4700-4711-8745-7a13f840a2b8" style="conditionnal_state" x="198" y="54" width="10" height="10" backcolor="#FF0000">
@@ -206,6 +202,11 @@
 				</textElement>
 				<text><![CDATA[Incident]]></text>
 			</staticText>
+			<textField evaluationTime="Group" evaluationGroup="campaign" isBlankWhenNull="true">
+				<reportElement uuid="f4e4c692-eac3-4982-ab6e-8e0fca829c5d" style="title" x="0" y="26" width="192" height="44"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{campaign_name}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -402,12 +403,6 @@
 				<textFieldExpression><![CDATA[$F{medicine_name}]]></textFieldExpression>
 				<hyperlinkReferenceExpression><![CDATA["http://localhost:3000/fra/backend/procedures/"+$F{id}]]></hyperlinkReferenceExpression>
 			</textField>
-			<componentElement>
-				<reportElement uuid="5cddaa0c-046c-4931-9757-bba1070788ae" x="82" y="4" width="34" height="33"/>
-				<jr:DataMatrix xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" textPosition="bottom">
-					<jr:codeExpression><![CDATA["http://unstable.ergolis.com/fra/backend/products/"+$F{target_id}]]></jr:codeExpression>
-				</jr:DataMatrix>
-			</componentElement>
 		</band>
 	</detail>
 	<pageFooter>
