--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -26,7 +26,9 @@ jpn:
       # detach: "Dissocier une transaction"
       # index: "Transactions"
       # select: "Ajouter une transaction"
-    backend/aggregators: #?
+    backend/aggregators:
+      # index: "Aggrégateurs"
+      # show: "%{name}"
     backend/analytic_repartitions:
       # edit: "Modifier la répartion analytique\_: %{id} "
       # index: "Répartitions analytiques"
@@ -1377,6 +1379,7 @@ jpn:
     # search_sales: "Rechercher des ventes"
     # second_building_name: "Entrée de"
     # second_contact: "Adresse secondaire"
+    # section_x: "%{section} %{x}"
     # select_account_client: "Compte à lettrer"
     # select_account_supplier: "Compte à lettrer"
     # select_area: "Zone postale"
