--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -14,6 +14,7 @@ jpn:
         # product_nature: "Type de produit concerné"
         # repartition_percentage: "Pourcentage d’affectation"
       animal:
+        # born_at: "Né(e) le"
         # variety: "Race"
       animal_group:
         # born_at: "Créé le"
